--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                       " />
                                     <h4 class="team-name">Paul Vickers</h4>
                                     <h5 class="team-position">Contributing editor</h5>
-                                    <button type="button" class="team-button">CHECK ARTICLES</button>
+                                    <a class="team-button" href="">CHECK ARTICLES</a>
                                 </div>
                                 <div class="team-text">
                                     <p class="limited">Paul Vickers is the owner and CEO of Stablegold Hospitality, a real estate
@@ -148,7 +148,7 @@
                                       " />
                                     <h4 class="team-name">Mary Fincher</h4>
                                     <h5 class="team-position">Editor</h5>
-                                    <button type="button" class="team-button">check articles</button>
+                                    <a class="team-button" href="">CHECK ARTICLES</a>
                                 </div>
                 
                                 <div class="team-text">
@@ -177,7 +177,7 @@
                                       " />
                                     <h4 class="team-name">Kathleen Buckner</h4>
                                     <h5 class="team-position">Columnist</h5>
-                                    <button type="button" class="team-button">CHECK ARTICLES</button>
+                                    <a class="team-button" href="">CHECK ARTICLES</a>
                                 </div>
                                 <div class="team-text">
                                     <p class="limited">Kathleen Buckner managing director at The Lerner Group, a wealth management firm
